product implement with swagger
